2001-12-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/autogsdoc.m: Simplify file processing and cleanup so that
	spurious linkage and indexing is not done when run on a single file.

Fri Dec 21 13:50:50 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSBundle.m ([+bundleForLibrary:]): New method.
	([+bundleForTool:]): New method.
	* Headers/gnustep/base/NSBundle.h: Declare them.

Fri Dec 21 11:48:49 2001  Nicola Pero  <nicola@brainstorm.co.uk>
	
	* NSTimeZones/Makefile.postamble (timezonedir, before-install):
	Unused targets removed.

2001-12-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSXML.m: Check validation status at parse completion.
	* Source/NSUserDefaults.m: Ensure flags are initialised.
	* Source/GSCompatibility.m: Set GNUstep DTD for propertyLists.
	* Tools/plist-0_9.dtd: GNUstep property list DTD.
	* Source/autogsdoc.m: Improve dependency checking ... only regenerate
	project index when necessary, thus avoiding some gsdoc file parsing.

Wed Dec 19 02:17:09 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSThread.m (GSRegisterCurrentThread): Use @defs to 
	access protected variables of NSThread otherwise GCC 3.1 refuses to 
	compile it. 
	(GSUnregisterCurrentThread): Idem.

Tue Dec 18 18:02:07 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSObject.m ([+conformsToProtocol:]): Fixed - it was
	checking that the metaclass conforms to the protocol rather than
	the class, which was causing it to fail for protocols implemented
	in categories.

2001-12-18  Richard Frith-Macdonald <rfm@gnu.org>

	Many source files modified to contain date, version, and title info.
	* Tools/AGSHtml.m: Fix 'standards' output.  Implement date and version.
	* Tools/AGSOutput.m: Add 'standards' support for class, category,
	and protocol.  Use new standards info from parser.
	* Tools/AGSParser.h: New method to set current standards.
	* Tools/AGSParser.m: Implement simplistic parsing of preprocessor