@@ -1,3 +1,8 @@
+2001-12-22  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Tools/autogsdoc.m: Fix bug in handling args introduceed by last
+	modification.  Removed next and prev linkage at Nicolas suggestion.
+
 2001-12-21  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Tools/autogsdoc.m: Simplify file processing and cleanup so that
